namespace ApplicationCore.Domain.Enums
{
    public enum EstadoPedido
    {
        PENDIENTE,
        EN_PROCESO,
        ENVIADO,
        ENTREGADO,
        CANCELADO
    }
}
